# emotion-bench

./: .env.example  .gitignore  LICENSE  README.md  emotions.yaml  estimate_cost.py  main.py  pyproject.toml
.github/workflows/: python.yml
emotion_bench/: __init__.py  analyzer.py  emotions.py  reference_voices.py  stt_client.py  tts_client.py
tests/: __init__.py  benchmark_results.py  conftest.py  test_emotions.py
